Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/DeweyFinding__c.object-meta.xml
<CustomObject>
    <description>Individual rule violations found during a Dewey org assessment run. Master-Detail child of DeweyAnalysis__c.</description>
    <label>Dewey Finding</label>
    <nameField>
        <displayFormat>FIND-{000000}</displayFormat>
        <label>Finding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dewey Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>