Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>