Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/DeweyAnalysis__c.field-meta.xml
<CustomField>
    <fullName>DeweyAnalysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first analysis run that detected this finding. The finding record persists independently across multiple runs via DeweyAnalysisFinding__c junction records.</description>
    <label>First Seen In Analysis</label>
    <referenceTo>DeweyAnalysis__c</referenceTo>
    <relationshipLabel>Findings (First Seen)</relationshipLabel>
    <relationshipName>DeweyFindings</relationshipName>
    <type>Lookup</type>
</CustomField>