Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/FilePath__c.field-meta.xml
<CustomField>
    <fullName>FilePath__c</fullName>
    <label>File Path</label>
    <type>Text</type>
    <length>255</length>
    <description>Relative path of the file where the violation was found.</description>
</CustomField>