Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/FirstSeenDate__c.field-meta.xml
<CustomField>
    <fullName>FirstSeenDate__c</fullName>
    <description>Date and time when this finding was first detected in any analysis run for this org.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Seen Date</label>
    <type>DateTime</type>
</CustomField>