Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>Line Number</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>