Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Human-readable description of the violation, copied from DeweyRule__c.Message__c at write time.</description>
</CustomField>