Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <description>Remediation guidance, copied from DeweyRule__c.Remediation__c at write time.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remediation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>