Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the DeweyRule__c that triggered this finding. Resolved via DeweyRule__c.RuleId__c (External ID).</description>
    <label>Rule</label>
    <referenceTo>DeweyRule__c</referenceTo>
    <relationshipLabel>Dewey Findings</relationshipLabel>
    <relationshipName>DeweyFindings</relationshipName>
    <type>Lookup</type>
</CustomField>