Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of this finding. Découvert: first detected. Pris en charge: a task has been created. Disparu: no longer detected in a subsequent run but not yet resolved. Résolu: manually marked as fixed. Accepté: manually accepted as a known risk — creates a DeweyExclusion__c to suppress future detection.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Découvert</fullName>
                <default>true</default>
                <label>Découvert</label>
            </value>
            <value>
                <fullName>Pris en charge</fullName>
            </value>
            <value>
                <fullName>Disparu</fullName>
            </value>
            <value>
                <fullName>Résolu</fullName>
            </value>
            <value>
                <fullName>Accepté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>