Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyFinding__c/listViews/All_findings.listView-meta.xml
<ListView>
    <fullName>All_findings</fullName>
    <columns>NAME</columns>
    <columns>ComponentName__c</columns>
    <columns>ComponentType__c</columns>
    <columns>Severity__c</columns>
    <columns>IsAssigned__c</columns>
    <columns>IsNew__c</columns>
    <columns>IsResolved__c</columns>
    <columns>DeweyAnalysis__c</columns>
    <filterScope>Everything</filterScope>
    <label>All findings</label>
    <sharedTo>
        <allInternalUsers>true</allInternalUsers>
    </sharedTo>
</ListView>